objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>Experience_in_Years__c</fullName>
        <label>Experience in Years</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Teacher</relationshipLabel>
        <relationshipName>Teacher</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Teacher</label>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teacher</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>